# gcp-batch-load-hive-partitioned-data-from-gcs-to-bigquery

./: Dockerfile  README.md  bq_create_table_ddl.sql  commands.sh  main.py  pipeline-diagram.excalidraw  pyproject.toml  workflow.yaml
ingestion/: app.py  bigquery_interaction.py  config.py  partition.py  tasks.py  types.py
